guide preview embed spacing fixes

--- a/components/CandidateGuideEmbed/CandidateGuideEmbed.module.scss
+++ b/components/CandidateGuideEmbed/CandidateGuideEmbed.module.scss
@@ -17,7 +17,7 @@
   justify-content: space-between;
   width: 100%;
   background-color: $grey-light;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 1rem !important;
   border-bottom: 1px solid $grey;
 
   strong {
@@ -60,6 +60,7 @@
 }
 
 .questionsTitle {
+  margin-top: 0;
   margin-bottom: 0.5rem !important;
   font-size: 0.8em;
 }
@@ -204,10 +205,12 @@
   font-size: 1.75em;
   font-weight: 500 !important;
   padding-right: 1rem;
+  margin: 0;
 }
 .officeSubtitle {
   padding-left: 1rem;
   font-size: 1.25em;
   font-weight: 500 !important;
   text-transform: uppercase;
+  margin: 0;
 }
